# 404-Team-Not-Found-HACKTOUR

./: LICENSE
anchor/: .env.example  .gitignore  README.md  pyproject.toml
anchor/backend/: __init__.py  agent.py  escalation.py  main.py  memory.py  patient_profile.json  voice.py
anchor/demo/: demo_script.md
anchor/frontend/: carer.html  index.html  patient.js  styles.css
anchor/scripts/: reset.py  seed_memory.py
docs/: anchor_concepts.md  hackathon_context.md
